// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "#1e90ff",
      },
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "800",
            },
            Object {
              "color": "#ffffff",
            },
          ]
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`should render properly with danger type 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "overflow": "hidden",
      },
      Object {},
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "800",
            },
            Object {
              "color": "#f57731",
            },
          ]
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`should render properly with disabled 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "overflow": "hidden",
      },
      Object {
        "opacity": 0.5,
      },
      Object {
        "backgroundColor": "#1e90ff",
      },
    ]
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "800",
            },
            Object {
              "color": "#f57731",
            },
          ]
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;
